# cyborg

cyborg/: package.xml
cyborg_bt/: CMakeLists.txt  package.xml  setup.py
cyborg_bt/src/: main.py
cyborg_bt/src/cyborg_bt_nodes/actions/: move_to.py
cyborg_bt_nodes/src/cyborg_bt_nodes/actions/: move_to.py
cyborg_detect/: CMakeLists.txt
cyborg_detect/launch/: detect.launch
cyborg_detect/src/: main.py
cyborg_msgs/: CMakeLists.txt
cyborg_nav/: CMakeLists.txt  package.xml
cyborg_nav/launch/: cyborg_nav.launch
cyborg_nav/src/: available_goals.py  closest_goal.py  distance_to_goal.py
cyborg_util/src/cyborg_util/: locations.py
